test/tests/stages/11_long_integers/valid/libraries/return_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  long
  identifier(add)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  {
  return
  (
  long
  )
  identifier(a)
  +
  (
  long
  )
  identifier(b)
  ;
  }
