test/tests/stages/11_long_integers/invalid_parse/fun_name_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  long
  (
  void
  )
  {
  return
  const int(4)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  long
  (
  )
  ;
  }
